# liars-dice

./: .gitignore  ARCHITECTURE.md  README.md  play.py  pyproject.toml  requirements.txt  stats_utils.py  test_deterministic.py  visualize.py
agents/: __init__.py  base.py  deterministic_agent.py  human.py
game/: __init__.py  engine.py  prompts_v2.py  types.py
