[project]
name = "liars-dice"
version = "0.2.0"
description = "Liar's Dice AI Arena - LLMs playing bluffing games via LM Studio"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["game*", "agents*", "providers*"]
